(fc) FileDispatcherImpl.setDirect0 might return uninitialized variable on some platforms

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 17
    • Affects Version/s: 11, 17
    • Component/s: core-libs
    • None
    • b17
    • generic
    • generic

      The variable "result" in Java_sun_nio_ch_FileDispatcherImpl_setDirect0 might be uninitialized, if neither O_DIRECT, F_NOCACHE, or DIRECTIO_ON is defined, because the final #else block is not an assignment, but a comparison.

      https://github.com/openjdk/jdk/blob/7e42642939c0c3b8b872d72890fbb5aab4c3e507/src/java.base/unix/native/libnio/ch/FileDispatcherImpl.c

            Assignee:
            Christoph Göttschkes (Inactive)
            Reporter:
            Christoph Göttschkes (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: