8264502: FileDispatcherImpl_setDirect0 might return uninitialized variable